2007-03-30  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/foreign.R (graph.graphdb) : added

	* interfaces/R/igraph/R/topology.R (graph.isomorphic.vf2) : added
	* interfaces/R/src/rinterface.c (R_igraph_isomorphic_vf2) : added

2007-03-29  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/revolver.R (evolver.d, evolver.ad) : added
	* interfaces/R/src/rinterface.c (R_igraph_evolver_d)
	(R_igraph_evolver_ad) : added

	* interfaces/R/src/rinterface.c (R_igraph_vector_to_SEXP)
	(R_igraph_0orvector_to_SEXP, R_igraph_0ormatrix_to_SEXP) : added	

2007-03-26  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/measure.dynamics.R (measure.dynamics.id) :
	which argument added to choose from the two expected citations
	calculation versions
	* interfaces/R/src/rinterface.c
	(R_igraph_measure_dynamics_id_expected) : updated accordingly

2007-03-25  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/measure.dynamics.R (measure.dynamics.id)
	(measure.dynamics.idage) : 'error' argument added
	* interfaces/R/src/rinterface.c (R_igraph_measure_dynamics_id_expected)
	(R_igraph_measure_dynamics_idage_expected) : added
	
	* interfaces/R/igraph/R/measure.dynamics.R (measure.dynamics.id)
	(measure.dynamics.idage) : 'cites' argument added
	* interfaces/R/src/rinterface.c (R_igraph_measure_dynamics_id)
	(R_igraph_measure_dynamics_idage) : updated to have 'cites'

	* interfaces/R/igraph/R/measure.dynamics.R (measure.dynamics.id) :
	'debug' and 'debugdeg' added
	* interfaces/R/src/rinterface.c (R_igraph_measure_dynamics_id) :
	updated to have 'debug' and 'debugdeg'
	
	* interfaces/R/igraph/R/measure.dynamics.R (measure.dynamics.id)
	(measure.dynamics.idage) : some reorganization to return
	consistent 'st'

2007-03-23  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/tkplot.R (.tkplot.convert.color) : drop
	alpha channel if present

	* interfaces/R/igraph/R/tkplot.R (.tkplot.convert.color, tkplot) : 