@@ -1,3 +1,15 @@
+2007-03-31  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/foreign.R (read.graph, read.graph.graphdb) :
+	support added for graphdb format
+
+	* interfaces/R/igraph/R/foreign.R (graph.graphdb) : read the 
+	graph using the C level function
+	* interfaces/R/src/rinterface.c (R_igraph_read_graph_graphdb) : added
+
+	* interfaces/R/igraph/R/foreign.R (read.graph.toraw) : modified to
+	read the file in binary mode
+	
 2007-03-30  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/foreign.R (graph.graphdb) : added
